[package]

name = "dbqueue-server"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-dbqueue.git"
description = "A distributed queue with a client server model."
readme = "README.md"
license = "MIT"

[dependencies]
dbqueue-common = { path = "../common" }
mio = { git = "http://github.com/reem/mio", branch = "nonblock-read-write-impls" }
eventual = { git = "http://github.com/carllerche/eventual" }
uuid = "~0.1"
iobuf = "~5"
threadpool = "~0.1"
log = "~0.3"
comm = { git = "https://github.com/mahkoh/comm" }

