[package]

name = "dbqueue-tests"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-dbqueue.git"
description = "A distributed queue with a client server model."
readme = "README.md"
license = "MIT"

[dependencies]
dbqueue-common = { path = "../common" }
dbqueue-server = { path = "../server" }
dbqueue-client = { path = "../client" }
mio = { git = "https://github.com/reem/mio", branch = "nonblock-read-write-impls" }
eventual = { git = "https://github.com/carllerche/eventual" }
uuid = "~0.1"

